2025-04-06T01:21:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14287619322 # 605
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-06
* notice: last 14d: unq all: 15 17
* notice: prev accum: outdated-unq outdated-all / unq all: 947 1427 / 963 1443
* notice: next accum: outdated-unq outdated-all / unq all: 947 1427 / 964 1444
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-05]

2025-04-04T01:16:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14255954080 # 603
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-04
* notice: last 14d: unq all: 15 16
* notice: prev accum: outdated-unq outdated-all / unq all: 947 1427 / 961 1441
* notice: next accum: outdated-unq outdated-all / unq all: 947 1427 / 963 1443
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-04-03]

2025-04-03T01:16:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14232827683 # 602
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-03
* notice: last 14d: unq all: 13 14
* notice: prev accum: outdated-unq outdated-all / unq all: 944 1424 / 959 1439
* notice: next accum: outdated-unq outdated-all / unq all: 947 1427 / 961 1441
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-03-19 2025-03-20] / [2025-04-02]

2025-04-02T01:18:01Z: