@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-06T01:21:30Z",
+  "timestamp" : "2025-04-07T01:19:23Z",
   "count_outdated" : 1427,
   "uniques_outdated" : 947,
-  "count" : 1444,
-  "uniques" : 964,
+  "count" : 1445,
+  "uniques" : 965,
   "clones" : [
     {
       "timestamp": "2025-03-25T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2025-04-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
