@@ -1,5 +1,5 @@
 {
-  "count": 17,
+  "count": 18,
   "uniques": 15,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2025-04-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
