@@ -1,3 +1,12 @@
+2025-04-07T01:19:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14298744578 # 606
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-07
+* notice: last 14d: unq all: 15 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 947 1427 / 964 1444
+* notice: next accum: outdated-unq outdated-all / unq all: 947 1427 / 965 1445
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-04-06]
+
 2025-04-06T01:21:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14287619322 # 605
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-06
